writing-a-c-compiler-tests/tests/chapter_1/invalid_lex/double_invalid_identifier.c
int main(void)
{
    return @b;
    return 1foo;
}